[gd_scene load_steps=5 format=3 uid="uid://bn3pivcnfpu1x"]

[ext_resource type="StyleBox" uid="uid://pffww0em5f35" path="res://ui/ingame_panel_black.tres" id="1_0w5r2"]
[ext_resource type="Script" path="res://ui/card_pile_panel.gd" id="1_5ih6j"]
[ext_resource type="Theme" uid="uid://dptpxyk5ldmai" path="res://ui/main_theme.tres" id="2_tn5uh"]
[ext_resource type="PackedScene" uid="uid://di8413bx5b8td" path="res://ui/card_view.tscn" id="3_j854v"]

[node name="CardPilePanel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ih6j")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 640)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_0w5r2")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PanelTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tn5uh")
theme_override_font_sizes/font_size = 26
text = "Draw Pile"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CardGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 40
columns = 3

[node name="CardView" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView2" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView3" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView4" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView5" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView6" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView7" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView8" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView9" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView10" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView11" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView12" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView13" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView14" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CardView15" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("3_j854v")]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Close"
